# engram-go

./: .dockerignore  .env.example  .gitguardian.yaml  .gitguardian.yml  .gitignore  .gitleaks.toml  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION-UPDATE-SUMMARY-2026-01-25.md  Dockerfile  Dockerfile.postgres  Dockerfile.reembed  FAILURE-MODES-CATALOG.md  KNOWLEDGE-INDEX.md  LESSONS-LEARNED-CERT-MANAGER.md  LESSONS-LEARNED-GMAIL-TRACKER-RESTART-LOOP.md  LICENSE  Makefile  PROJECTS.md  README.md  REPORT-1345.md  RESULTS-m1.md  SECURITY-INCIDENT-2026-01-18.md  SECURITY.md  SESSION-2026-02-09-ORWELL-VOICE-COMPLETE.md  SESSION-2026-02-13-PLAYWRIGHT-QA-INFRASTRUCTURE.md  SESSION-2026-02-14-14-VARIANT-DEPLOYMENT.md  SESSION-2026-02-14-GORDON-CISO-VERIFICATION-FINDINGS.md  docker-compose.lan.yml  docker-compose.local.yml  docker-compose.rocm.yml  docker-compose.yml  enterprise-ingressroute-fixed.yaml  go.mod  go.sum
.armies/: ROSTER.md  bench-roster.md  roster-guidance.md  roster.jsonl
.claude/: MODEL-SELECTION-POLICY.md  mcp_servers.json.example  settings.json
cmd/: README.md
consolidator/: pyproject.toml
consolidator/instinct/: engram_client.py  haiku_client.py  patterns.py  run.py
consolidator/tests/: test_engram_client.py  test_haiku_client.py  test_hook_capture.sh  test_patterns.py  test_run.py
consolidator/tests/fixtures/: buffer_sample.jsonl  hook_stdin_bash.json  hook_stdin_edit.json
reembed-rs/: Cargo.toml  README.md
reembed-rs/src/: claim.rs  main.rs
reembed-rs/tests/: validate_embeddings_integration.rs  worker_pool.rs
(+1437 files in other folders)
