[package]
name = "engram-reembed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engram-reembed"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
pgvector = { version = "0.4", features = ["sqlx"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio-util = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
